<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="10dp"
    tools:context="com.influx.marcus.theatres.myaccount.GiftCardsFragment">

    <ImageView
        android:id="@+id/ivGiftCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tvGiftCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/getrewarded"
        android:textColor="@color/white_light"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivGiftCard" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/loginreward"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvGiftCard"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvMagical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/gift_card"
        android:textColor="@color/marcus_red"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tvGiftCard" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cardRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvMagical" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cardRecyclerView">

        <TextView
            android:id="@+id/tvEnroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/enroll_your_gift_card"
            android:textColor="@color/white_light"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEnrolltxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gotham_book"
            android:text="@string/gift_desc"
            android:textColor="@color/white_light"
            app:layout_constraintTop_toBottomOf="@+id/tvEnroll" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="10dp"
            android:background="@color/marcus_red"
            android:drawableLeft="@drawable/ic_add"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:textAllCaps="false"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/add_gift_card"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvEnrolltxt" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
