<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvMarcus"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/magical_account"
        android:textColor="@color/white_light"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/gotham_book"/>
    <View
        android:id="@+id/viewMarcus"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMarcus"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/points"
        android:textColor="@color/marcus_red"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/viewMarcus"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/gotham_bold"/>
    <TextView
        android:id="@+id/tvPointBal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_bal"
        android:textColor="@color/white_light"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tvPoints"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/gotham_bold"/>

    <TextView
        android:id="@+id/tvPointsCount"
        android:fontFamily="@font/gotham_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pointvalue"
        android:layout_marginTop="4dp"
        android:textColor="@color/white_light"
        app:layout_constraintTop_toBottomOf="@+id/tvPointBal"/>

    <View
        android:id="@+id/viewRewards"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPointsCount"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/tvRewardbal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reward_bal"
        android:textColor="@color/white_light"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/viewRewards"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/gotham_bold"/>

    <View
        android:id="@+id/viewRewardsBal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRewardbal"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/tvCardNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/viewRewardsBal"
        android:textColor="@color/grey_xlight"
        android:textSize="12sp"
        android:fontFamily="@font/gotham_book"
        android:text="@string/pointvalue" />

    <TextView
        android:id="@+id/tvPointDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCardNo"
        android:textColor="@color/white_light"
        android:textSize="12sp"
        android:fontFamily="@font/gotham_book"
        android:layout_marginTop="8dp"
        android:text="@string/pointvalue" />

</android.support.constraint.ConstraintLayout>
